[project]
name = "scenefun3d"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "imageio>=2.37.0",
    "moviepy>=2.0.0",
    "numpy>=2.0.2",
    "open3d>=0.19.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.2",
    "plyfile>=1.1.2",
    "pyviz3d>=0.4.0",
    "scipy>=1.13.1",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "tyro>=0.9.32",
    "viser>=1.0.10",
]
